src/generate/snapshots/bevy_state_plugin_generator__generate__tests__naming_scheme@no_src_Short_no_rustfmt.snap
---
source: src/generate/tests.rs
expression: result
---
use bevy::prelude::AppExtStates;
#[allow(missing_docs)]
pub mod states {
    #[derive(bevy::prelude::States, Hash, Default, Debug, Clone, PartialEq, Eq)]
pub enum GameState {
    #[default]
    RootState
}

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::RootState)]
pub struct GameStateRootState;

}
pub struct GeneratedStatesPlugin;
impl bevy::app::Plugin for GeneratedStatesPlugin {
    fn build(&self, app: &mut bevy::app::App) {
        app.init_state::<states::GameState>().add_sub_state::<states::GameStateRootState>();
    }
}
